fix issue with artist or track name being too long

--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,7 @@ code {
 .drop-shadow {
   box-shadow: 0px 4px 10px 0px #444;
 }
+
+.word-wrap {
+  word-wrap: break-word;
+}
